# tagup

./: README.md  pyproject.toml
tagup_challenge/: machine_5.csv  main.ipynb
