[tool.poetry]
name = "tagup"
version = "0.1.0"
description = ""
authors = ["TzuHwan Seet <tzuhwan_seet@brown.edu>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.3.5"
numpy = "^1.21.4"
scipy = "^1.7.3"
matplotlib = "^3.5.1"
seaborn = "^0.11.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
